# william-os

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CAREER_OS_SPRINT_1_PLAN.md  CAREER_OS_SPRINT_2_BACKLOG.md  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 436dfab1ec67_sprint4_trading_sleep_decisions.py  67941129bd1c_sprint3_messaging_voice_study_fitness.py  audit_m14_index_cast_fix.py  calendar_001_google_apple_integration.py  career_001_schema.py  f439e40f9fce_initial_schema_all_modules.py  integrations_001_api_keys_and_logs.py  invalidate_plaintext_api_keys_c3.py  journal_drafts_001_persistent_drafts.py  merge_career_and_c3_001.py  multiuser_001_avatar_url.py  onboarding_001_profile_and_flow.py  sprint10_001_observability_security.py  sprint7_001_intelligence_engine.py  sprint7_002_life_scores.py  sprint7_003_gamification_system.py  sprint8_001_memory_agents_predictive.py  sprint9_001_rules_engine.py  study_focus_001_focus_sessions.py  webhooks_001_rules_webhook_registry.py  william_b2_unique_constraints.py
backend/app/: __init__.py  main.py  worker.py
backend/app/core/: ai.py  config.py  database.py  email.py  events.py  experiments.py  logging.py  metrics.py  middleware.py  observability.py  offline.py  permissions.py  rate_limit.py  security.py  security.py.bak  security.py.new  sync.py  websocket.py
backend/app/shared/: types.py
backend/tests/: conftest.py
backend/tests/career/: test_score.py
backend/tests/integration/: test_briefing_api.py  test_e2e_user_journey.py  test_feed_api.py  test_gamification_api.py  test_intelligence_api.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_api.py  test_decisions.py  test_email_intel.py  test_events.py  test_experiments.py  (+19 more)
(+271 files in other folders)
