[project]
name = "william-os-backend"
version = "0.1.0"
description = "WILLIAM OS — Personal AI Operating System Backend"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]==1.7.4","bcrypt==4.0.1",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
    "google-generativeai>=0.8.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.4",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-celery>=0.51b0",
    "qrcode>=8.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "locust>=2.31.0",
    "aiosqlite>=0.20.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

[tool.mypy]
python_version = "3.12"
strict = true


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
